完善新闻展示

--- a/TTNewsSDK/Podfile
+++ b/TTNewsSDK/Podfile
@@ -13,7 +13,7 @@ target 'TTNewsSDK' do
 
   pod 'AFNetworking'
   pod 'YYModel'
-  pod 'YYImage'
+  #pod 'YYWebImage'
   pod 'FMDB', '~> 2.6.2' # 必须指定版本号为2.6.2 否则导入GYDataCenter就报错
   pod 'GYDataCenter'
   pod 'MJRefresh'
