--- a/TTNewsSDK/Podfile
+++ b/TTNewsSDK/Podfile
@@ -14,7 +14,7 @@ target 'TTNewsSDK' do
   pod 'AFNetworking'
   pod 'YYModel'
   pod 'YYWebImage'
-  pod 'FMDB', '~> 2.6.2' # 必须指定版本号为2.6.2 否则导入GYDataCenter就报错
-  pod 'GYDataCenter'
+  pod 'YYImage/WebP'
+  pod 'FMDB'
   pod 'MJRefresh'
 end
